<resources>
    <string name="app_name">TaxiAndr</string>

    <string name="title_section1">Такси Андроид</string>
    <string name="title_section2">- Авторизация</string>
    <string name="title_section3">- Тарифы</string>
    <string name="title_section4">- Заказы</string>
    <string name="title_section5">- Таксометр</string>
    <string name="title_section6">- Выход</string>
    <string name="title_section7">- Очередь</string>
    <string name="title_section8">- Стоянки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_two">Заказ принят</string>

    <string name="hello_world">Hello world!</string>
    <string name="where_to_go">Адрес куда ехать</string>
    <string name="sms_button">Отправить СМС</string>
    <string name="title_activity_activity_three">Таксометр</string>
    <string name="btn_taxometr">Старт</string>
    <string name="btn_taxometr_stop">Расчет закончен</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
    <string name="title_activity_four">Авторизация</string>
    <string name="title_activity_activity_five">Тарифы</string>
    <string name="text_server">Сервер:</string>
    <string name="text_distance">Дистанция: 0 м</string>
    <string name="text_stay">Стоянка: 0 сек</string>
    <string name="text_inet">Интернет</string>
    <string name="text_gps">GPS</string>
    <string name="title_activity_activity_six">Поездки</string>
    <string name="gobackwards">Назад</string>
    <string name="fst10">Поездки</string>
    <string name="clear">Очистить</string>
    <string name="title_activity_activity_seven">Очередь</string>
    <string name="title_activity_activity_eight">Стоянки</string>
    <string name="queue_by_hand">Ручная постановка в очередь</string>
    <string name="update_app">Обновить</string>
    <string name="title_activity_activity_nine">Маршрут</string>


</resources>
