<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_example" android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />-->
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/item2" android:icon="@drawable/ic_action_location_3"
        app:showAsAction="always" android:title="@string/text_gps" />
    <item android:id="@+id/item3" android:icon="@drawable/ic_action_globe_2"
        app:showAsAction="always" android:title="@string/text_inet" />
    <!--
    <item android:id="@+id/item4" android:icon="@drawable/ic_action_location_2"
        app:showAsAction="always" android:title="@string/text_inet" />
    <item android:id="@+id/item5" android:icon="@drawable/ic_action_globe"
        app:showAsAction="always" android:title="@string/text_inet" />
        -->

</menu>
