<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_six"
    tools:context="com.taxiandroid.ru.taxiandr.ActivitySix">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gray_blue_color"
        >

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:text="@string/gobackwards"
            android:background="@drawable/my_btn_start"
            android:textColor="@drawable/white_color"
            >

        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:text="@string/fst10"
            android:id="@+id/btnFst10"
            android:background="@drawable/my_btn_start"
            android:textColor="@drawable/white_color"
            >
        </Button>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:text="@string/clear"
            android:background="@drawable/my_btn_start"
            android:textColor="@drawable/white_color"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    </LinearLayout>

</RelativeLayout>
