<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taxiandroid.ru.lvexample4.FourActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gray_blue_color"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        >

        <TableLayout
            android:stretchColumns="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            >
        <TableRow android:padding="5dp">
            <TextView
                android:id="@+id/tvSrv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_server"
                android:textColor="@drawable/white_color"
                >
            </TextView>

            <EditText
                android:id="@+id/etSrv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/dark_blue_color"
                android:textColor="@drawable/white_color"

                >
                <requestFocus>
                </requestFocus>
            </EditText>

        </TableRow>
            <TableRow android:padding="5dp">
                <TextView
                    android:id="@+id/tvLgn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@drawable/white_color"
                    >
                </TextView>

                <EditText
                    android:id="@+id/etLgn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/dark_blue_color"
                    android:textColor="@drawable/white_color"

                    >

                    <requestFocus>
                    </requestFocus>
                </EditText>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView
                    android:id="@+id/tvPsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@drawable/white_color"
                    >
                </TextView>

                <EditText
                    android:id="@+id/etPsw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/dark_blue_color"
                    android:textColor="@drawable/white_color"

                    >

                    <requestFocus>
                    </requestFocus>
                </EditText>
            </TableRow>
        </TableLayout>



        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp"
                >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btnSave"
                android:background="@drawable/my_btn_start"
                android:textColor="@drawable/white_color"
                >
            </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp"
                >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/btnLoad"
                android:background="@drawable/my_btn_start"
                android:textColor="@drawable/white_color"

                >
            </Button>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_app"
                    android:id="@+id/btnUpdate"
                    android:background="@drawable/my_btn_start"
                    android:textColor="@drawable/white_color"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    >
                </Button>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <ProgressBar
            android:id="@+id/progressDownload"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
        </ProgressBar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_by_hand"
            android:textColor="@drawable/white_color"
            android:button="@drawable/custom_checkbox"

            />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
